update with libsodium-static in alpine 3.10+

--- a/minisign/Dockerfile
+++ b/minisign/Dockerfile
@@ -1,9 +1,10 @@
-FROM alpine:3.9 as builder
+FROM alpine:latest as builder
 LABEL maintainer "James Wu <contact@analogist.net>"
 
 RUN apk add --no-cache \
         g++ \
         libsodium-dev \
+        libsodium-static \
         cmake \
         make \
         git
